--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -11,6 +11,6 @@ spec:
     spec:
       containers:
         - name: tt_micro_bl 
-          image: faustoarci.azurecr.io/tt_micro_bl 
+          image: faustoarci.azurecr.io/tt-micro-bl
           ports:
           - containerPort: 6001
